Adapt the whole thing once more

--- a/tex/congestion.bib
+++ b/tex/congestion.bib
@@ -141,3 +141,10 @@
 	author = {Boissard, Johan},
 	year = {2012}
 }
+
+@article{fall_network_2007,
+	title = {The network simulator (ns-2)},
+	journal = {URL: http://www.isi.edu/nsnam/ns},
+	author = {Fall, Kevin and Varadhan, Kannan},
+	year = {2007}
+}
